<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context="pages.PayFragment">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/input_rounded_corner_background"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="700dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_car"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="20dp"
                    android:layout_weight="8"></ImageView>

                <TextView
                    android:id="@+id/time_in"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/entrance_time"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/time_out"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/exit_time"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/car_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/car_number"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="40dp"
                    android:text="@string/total_count"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/discount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/discount_count"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/should_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/end_count"
                    android:textSize="40sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="120dp"
                    android:background="@drawable/clear_button"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="50sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="60dp"
            android:gravity="center"
            android:text="@string/pay_instruction"
            android:textColor="@color/yellow"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:background="@drawable/light_gery_background"
            android:orientation="vertical"
            android:padding="60dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:gravity="center"
                    android:text="@string/total_pay"
                    android:textColor="@color/black"
                    android:textSize="50sp" />
                <TextView
                    android:id="@+id/text_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="50sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:gravity="center"
                    android:text="@string/should_pay"
                    android:textColor="@color/black"
                    android:textSize="50sp" />
                <TextView
                    android:id="@+id/text_should_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="50sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:gravity="center"
                    android:text="@string/already_pay"
                    android:textColor="@color/black"
                    android:textSize="50sp" />
                <TextView
                    android:id="@+id/text_already_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="50sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/footer"
        layout="@layout/footer" />
</androidx.constraintlayout.widget.ConstraintLayout>