<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context="pages.EndingFragment">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text="@string/can_exit"
            android:textColor="@color/grey_border"
            android:textSize="50sp" />


        <TextView
            android:id="@+id/text_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/exit_desc"
            android:textColor="@color/yellow"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/next_time"
            android:textColor="@color/grey_border"
            android:textSize="30sp" />
    </LinearLayout>

    <include
        android:id="@+id/footer"
        layout="@layout/footer" />

    <EditText
        android:id="@+id/edit_none"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text=""
        tools:ignore="MissingConstraints"></EditText>
</androidx.constraintlayout.widget.ConstraintLayout>