<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context="pages.CarrierFragment">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scan_carrier"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_carrier"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="5"
                android:background="@drawable/input_rounded_corner_background"
                android:gravity="end|center"
                android:inputType="text"
                android:textSize="100sp"
                tools:ignore="Autofill,LabelFor" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="2"
                android:background="@drawable/clear_button"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_carrier"
            android:textColor="@color/yellow"
            android:textSize="30sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_previous"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/next_page_button"
        android:text="@string/previous_page"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <include
        android:id="@+id/footer"
        layout="@layout/footer" />
</androidx.constraintlayout.widget.ConstraintLayout>